--- a/main.css
+++ b/main.css
@@ -115,11 +115,17 @@ header .nav-right button:last-child {
 }
 
 section.wrapper {
-    width: 1000px;
+    max-width: 1000px;
     display: grid;
-    grid-template-columns: 1fr 4fr 1fr;
-    margin: 70px auto 0;
+    grid-auto-flow: column;
+    grid-template-columns: 200px 1fr 200px;
+    grid-gap: 20px;
+    margin: 60px auto 0;
 }
+
+section.wrapper >* {
+    grid-column: 2 / -2;
+  }
 
 section.wrapper h1 {
     font-family: 'Arbutus Slab', serif;
@@ -128,6 +134,26 @@ section.wrapper h1 {
     font-style: italic;
     line-height: 50px;
     grid-column: 2;
+}
+
+section.wrapper figure {
+    grid-column: 1 / -1;
+}
+
+section.wrapper figure img {
+    width: 100%;
+}
+
+figcaption {
+    grid-column: 1 / span 2;
+    font-size: 15px;
+    color: rgb(82, 82, 82);
+    margin-top: 10px;
+}
+
+section.wrapper figure span {
+    font-size: 13px;
+    color: grey;
 }
 
 
